--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".ActivityProductDetails" />
         <activity android:name=".ActivityCart"/>
+        <activity android:name=".MyProfile"/>
+        <activity android:name=".ReadPrivacy"/>
+        <activity android:name=".AddressBookActivity"/>
+        <activity android:name=".AddAddress"/>
+        <activity android:name=".payment.PayMentGateWay"/>
+        <activity android:name=".FavoriteList"/>
 
 
     </application>
