--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".payment.PayMentGateWay"/>
         <activity android:name=".FavoriteList"/>
         <activity android:name=".MyOrderList"/>
+        <activity android:name=".ActivityNotification"/>
 
 
     </application>
