--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".FavoriteList"/>
         <activity android:name=".MyOrderList"/>
         <activity android:name=".ActivityNotification"/>
+        <activity android:name=".MyOrderDetails"/>
 
 
     </application>
